<resources>
    <string name="app_name">Review App</string>
    <string name="welcomeText"><u><b>Tourist Review App</b></u></string>
    <string name="reviewText"><u><b>Review Page</b></u></string>
    <string name="searchText"><u><b>Search Page</b></u></string>
    <string name="createRText"><u><b>Create Review Page</b></u></string>
    <string name="profileText"><u><b>Profile Page</b></u></string>
    <string name="prpText"><u><b>Add your Rating</b></u></string>
    <string name="prpHeading"><u><b>Post a Review</b></u></string>
    <string name="rpHeading"><u><b>Review</b></u></string>
    <string name="rpNameText"><u><b></b></u></string>
    <string name="rpLocationText"><u><b></b></u></string>
    <string name="profilePage"><u><b>Profile</b></u></string>
    <string name="profileButton"><b>Update</b></string>
    <string name="picButton"><b>Change</b></string>
    <string name="sText"><u><b>Settings</b></u></string>
    <string name="searchHeading"><u><b>Search</b></u></string>
</resources>