<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="228dp"
        android:layout_height="228dp"


        app:layout_constraintBottom_toTopOf="@+id/welcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textSize="@dimen/mainTextsz"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/reviewBH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/reviewBH"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/button_bg"
        android:text="@string/reviewText"
        android:textColor="@color/black"
        android:textSize="@dimen/homeButtonsz"
        android:theme="@style/homeButton"
        app:layout_constraintBottom_toBottomOf="@+id/profileBH"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/searchBH"
        android:layout_width="448dp"
        android:layout_height="80dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/button_bg"
        android:text="@string/searchText"
        android:textColor="@color/black"
        android:textSize="@dimen/homeButtonsz"
        android:theme="@style/homeButton"
        app:layout_constraintBottom_toBottomOf="@+id/profileBH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createRBH"
        android:layout_width="448dp"
        android:layout_height="80dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/button_bg"
        android:text="@string/createRText"
        android:textColor="@color/black"
        android:textSize="@dimen/homeButtonsz"
        android:theme="@style/homeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profileBH"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/button_bg"
        android:text="@string/profileText"
        android:textColor="@color/black"
        android:textSize="@dimen/homeButtonsz"
        android:theme="@style/homeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRBH" />
</androidx.constraintlayout.widget.ConstraintLayout>