<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profileHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/profilePage"
        android:textColor="@color/black"
        android:textSize="@dimen/pHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeading"
        app:srcCompat="@drawable/profile_logo" />

    <EditText
        android:id="@+id/pNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:width="300dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:hint="Name"
        android:inputType="text"
        android:padding="10dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <EditText
        android:id="@+id/pEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:width="300dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pNameText" />

    <EditText
        android:id="@+id/pPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="300dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pEmailText" />

    <EditText
        android:id="@+id/pAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:width="300dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pPhoneText" />

    <Button
        android:id="@+id/pUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/profileButton"
        android:width="120dp"
        android:background="@drawable/button_rounded_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pAddressText"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/randomButton"
        android:layout_width="62dp"
        android:layout_height="20dp"
        android:background="@drawable/button_rounded_bg"
        android:text="Randomise"
        android:textSize="@dimen/ranButton"
        app:layout_constraintBottom_toTopOf="@+id/pEmailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pNameText"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/changePic"
        android:layout_width="99dp"
        android:layout_height="27dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_rounded_bg"
        android:text="@string/picButton"
        android:textSize="@dimen/ranButton"
        app:layout_constraintBottom_toTopOf="@+id/pNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        app:layout_constraintVertical_bias="0.209" />
</androidx.constraintlayout.widget.ConstraintLayout>